fix: snippet style padding, dimensions, overflow

--- a/styles/atom-ide-datatips.less
+++ b/styles/atom-ide-datatips.less
@@ -128,8 +128,17 @@
   }
 }
 
+
+// Applied to Snippet datatips (SnippetView)
 .datatip-snippet-container {
+  padding: 2px 0 2px 4px;
+}
+
 .datatip-snippet {
+  max-width: 500px;
+  max-height: 300px;
+  overflow: auto;
+
   flex-grow: 1;
   .cursors {
     display: none;
